// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField InputField render disabled when disabled is true 1`] = `
<Field
  className="stx-field--with-input"
  disabled={true}
  htmlFor="stxField49"
  messageId="stxFieldMessage50"
>
  <Input
    aria-describedby="stxFieldMessage50"
    disabled={true}
    id="stxField49"
    selectOnFocus={false}
    type="text"
  />
</Field>
`;

exports[`InputField InputField render readOnly when readOnly is true 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField51"
  messageId="stxFieldMessage52"
  readOnly={true}
>
  <Input
    aria-describedby="stxFieldMessage52"
    id="stxField51"
    readOnly={true}
    selectOnFocus={false}
    type="text"
  />
</Field>
`;

exports[`InputField InputField render with a loading spinner when loading is true 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField53"
  messageId="stxFieldMessage54"
>
  <Input
    aria-describedby="stxFieldMessage54"
    id="stxField53"
    loading={true}
    selectOnFocus={false}
    type="text"
  />
</Field>
`;

exports[`InputField InputField renders with a autoComplete value 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField47"
  messageId="stxFieldMessage48"
>
  <Input
    aria-describedby="stxFieldMessage48"
    autoComplete="off"
    id="stxField47"
    selectOnFocus={false}
    type="text"
  />
</Field>
`;

exports[`InputField InputField renders with a message type of alert 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField33"
  messageId="stxFieldMessage34"
  messageType="alert"
>
  <Input
    aria-describedby="stxFieldMessage34"
    aria-invalid="true"
    id="stxField33"
    messageType="alert"
    selectOnFocus={false}
    type="text"
  />
</Field>
`;

exports[`InputField InputField renders with a message type of success 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField37"
  messageId="stxFieldMessage38"
  messageType="success"
>
  <Input
    aria-describedby="stxFieldMessage38"
    id="stxField37"
    messageType="success"
    selectOnFocus={false}
    type="text"
  />
</Field>
`;

exports[`InputField InputField renders with a message type of warning 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField35"
  messageId="stxFieldMessage36"
  messageType="warning"
>
  <Input
    aria-describedby="stxFieldMessage36"
    id="stxField35"
    messageType="warning"
    selectOnFocus={false}
    type="text"
  />
</Field>
`;

exports[`InputField InputField renders with a min and max length 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField41"
  messageId="stxFieldMessage42"
>
  <Input
    aria-describedby="stxFieldMessage42"
    id="stxField41"
    maxLength={5}
    minLength={1}
    selectOnFocus={false}
    type="text"
  />
</Field>
`;

exports[`InputField InputField renders with a min and max value 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField39"
  messageId="stxFieldMessage40"
>
  <Input
    aria-describedby="stxFieldMessage40"
    id="stxField39"
    max={5}
    min={1}
    selectOnFocus={false}
    type="text"
  />
</Field>
`;

exports[`InputField InputField renders with a prefix 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField5"
  messageId="stxFieldMessage6"
>
  <Input
    aria-describedby="stxFieldMessage6"
    id="stxField5"
    prefix="-"
    selectOnFocus={false}
    type="text"
  />
</Field>
`;

exports[`InputField InputField renders with a step value 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField43"
  messageId="stxFieldMessage44"
>
  <Input
    aria-describedby="stxFieldMessage44"
    id="stxField43"
    selectOnFocus={false}
    step={5}
    type="text"
  />
</Field>
`;

exports[`InputField InputField renders with a suffix 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField7"
  messageId="stxFieldMessage8"
>
  <Input
    aria-describedby="stxFieldMessage8"
    id="stxField7"
    selectOnFocus={false}
    suffix="px"
    type="text"
  />
</Field>
`;

exports[`InputField InputField renders with a tabIndex value 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField45"
  messageId="stxFieldMessage46"
>
  <Input
    aria-describedby="stxFieldMessage46"
    id="stxField45"
    selectOnFocus={false}
    tabIndex={-5}
    type="text"
  />
</Field>
`;

exports[`InputField InputField renders with basic props 1`] = `
<Field
  ariaLive="assertive"
  className="stx-field--with-input html-class"
  htmlFor="test-id"
  messageId="stxFieldMessage2"
>
  <Input
    aria-describedby="stxFieldMessage2"
    data-additional-prop="additional-prop-test"
    id="test-id"
    name="name"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="placeholder"
    selectOnFocus={true}
    type="text"
    value="test-string"
  />
</Field>
`;

exports[`InputField InputField renders with size small 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField31"
  messageId="stxFieldMessage32"
>
  <Input
    aria-describedby="stxFieldMessage32"
    id="stxField31"
    selectOnFocus={false}
    size="small"
    type="text"
  />
</Field>
`;

exports[`InputField InputField renders with type date 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField11"
  messageId="stxFieldMessage12"
>
  <Input
    aria-describedby="stxFieldMessage12"
    id="stxField11"
    selectOnFocus={false}
    type="date"
  />
</Field>
`;

exports[`InputField InputField renders with type datetime-local 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField13"
  messageId="stxFieldMessage14"
>
  <Input
    aria-describedby="stxFieldMessage14"
    id="stxField13"
    selectOnFocus={false}
    type="datetime-local"
  />
</Field>
`;

exports[`InputField InputField renders with type email 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField23"
  messageId="stxFieldMessage24"
>
  <Input
    aria-describedby="stxFieldMessage24"
    id="stxField23"
    selectOnFocus={false}
    type="email"
  />
</Field>
`;

exports[`InputField InputField renders with type file 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField29"
  messageId="stxFieldMessage30"
>
  <Input
    aria-describedby="stxFieldMessage30"
    id="stxField29"
    selectOnFocus={false}
    type="file"
  />
</Field>
`;

exports[`InputField InputField renders with type number 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField19"
  messageId="stxFieldMessage20"
>
  <Input
    aria-describedby="stxFieldMessage20"
    id="stxField19"
    selectOnFocus={false}
    type="number"
  />
</Field>
`;

exports[`InputField InputField renders with type password 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField27"
  messageId="stxFieldMessage28"
>
  <Input
    aria-describedby="stxFieldMessage28"
    id="stxField27"
    selectOnFocus={false}
    type="password"
  />
</Field>
`;

exports[`InputField InputField renders with type search 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField17"
  messageId="stxFieldMessage18"
>
  <Input
    aria-describedby="stxFieldMessage18"
    id="stxField17"
    selectOnFocus={false}
    type="search"
  />
</Field>
`;

exports[`InputField InputField renders with type tel 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField21"
  messageId="stxFieldMessage22"
>
  <Input
    aria-describedby="stxFieldMessage22"
    id="stxField21"
    selectOnFocus={false}
    type="tel"
  />
</Field>
`;

exports[`InputField InputField renders with type text 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField9"
  messageId="stxFieldMessage10"
>
  <Input
    aria-describedby="stxFieldMessage10"
    id="stxField9"
    selectOnFocus={false}
    type="text"
  />
</Field>
`;

exports[`InputField InputField renders with type time 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField15"
  messageId="stxFieldMessage16"
>
  <Input
    aria-describedby="stxFieldMessage16"
    id="stxField15"
    selectOnFocus={false}
    type="time"
  />
</Field>
`;

exports[`InputField InputField renders with type url 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField25"
  messageId="stxFieldMessage26"
>
  <Input
    aria-describedby="stxFieldMessage26"
    id="stxField25"
    selectOnFocus={false}
    type="url"
  />
</Field>
`;

exports[`InputField InputField renders without any props 1`] = `
<Field
  className="stx-field--with-input"
  htmlFor="stxField3"
  messageId="stxFieldMessage4"
>
  <Input
    aria-describedby="stxFieldMessage4"
    id="stxField3"
    selectOnFocus={false}
    type="text"
  />
</Field>
`;
